Addition of the 2019 version csv header description.

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -1,5 +1,9 @@
 OUTPUT_DIR: ''
 
+# Synthetic csv files v2019
+CSV_2019_TRIGGER: ''
+CSV_2019_ALL: ''
+
 # DEMs (with different resolutions)
 DEM_PATHS:
   - ''
